<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <CheckBox
        android:id="@+id/check_box_programmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programmer"
        android:layout_margin="@dimen/medium_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <CheckBox
        android:id="@+id/check_box_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:layout_marginBottom="@dimen/medium_space"
        app:layout_constraintStart_toStartOf="@id/check_box_programmer"
        app:layout_constraintTop_toBottomOf="@id/check_box_programmer"
        />

    <CheckBox
        android:id="@+id/check_box_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network"
        android:layout_marginBottom="@dimen/medium_space"
        app:layout_constraintStart_toStartOf="@id/check_box_programmer"
        app:layout_constraintTop_toBottomOf="@id/check_box_data"
        />

    <CheckBox
        android:id="@+id/check_box_cyber_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cyber_security"
        android:layout_marginBottom="@dimen/medium_space"
        app:layout_constraintStart_toStartOf="@id/check_box_programmer"
        app:layout_constraintTop_toBottomOf="@id/check_box_network"
        />

    <EditText
        android:id="@+id/edit_text_location"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/location"
        app:layout_constraintStart_toStartOf="@id/check_box_programmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_company"/>

    <EditText
        android:id="@+id/edit_text_company"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/company"
        app:layout_constraintStart_toStartOf="@id/check_box_programmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_box_cyber_security"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_date_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/before"
        app:layout_constraintStart_toStartOf="@id/check_box_programmer"
        app:layout_constraintTop_toBottomOf="@id/edit_text_location"/>

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-100dp"
        app:layout_constraintStart_toStartOf="@id/check_box_programmer"
        app:layout_constraintTop_toBottomOf="@id/switch_date_mode"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="125dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>